# synergy-map-app

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CONTEXT.md  README.md  agent.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml
docs/: README.md  cursor-sdk-integration.md  flow-animation-spec.md  implementation-plan-beta.md  implementation-plan-mvp-1.md  implementation-plan-phase-0.md  implementation-plan-ux-onboarding.md  incident-report-readonly-mode-edge-visibility.md  layered-map-future-concept.md  mvp-spec.md  notes.md  phase-0-go-no-go-report.md  phase-0-information-policy.md  phase-0-platform-verification.md  product-competitive-positioning-and-strategy.md  product-role-models-and-competitors-research.md  product-vision-business-principles.md  project-context.md  requirements.md  synergy-map-design-mvp-1.md  tech-stack.md  thinking-immersion-design-direction.md  ui-design-mvp-1.md  ux-improvement-plan-initial-map-flow.md  シナジーマップ可視化ツール構想.md
docs/adr/: 0001-mvp-primary-user-owner-operator.md
docs/design/: flow-animation-spec.md  (+2 more)
scripts/: benchmark-ai-provider.mts  cursor-structured-turn.mts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql  0002_mvp1.sql  0003_business_impact_view.sql  0004_phase1_daily_use.sql  0005_center_node.sql  0006_ai_lens_items.sql
src-tauri/src/: ai_provider.rs  ai_schema.rs  app_settings.rs  codex_app_server.rs  cursor_sdk_bridge.rs  env_config.rs  lib.rs  main.rs  mvp1.rs  mvp1_types.rs  source_reader.rs
(+74 files in other folders)
