[package]
name = "synergy-map-app"
version = "0.1.0"
description = "Synergy Map desktop proof of concept"
authors = ["ryukouokumura"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "synergy_map_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
time = { version = "0.3.47", features = ["formatting"] }
csv = "1.4.0"
calamine = "0.35.0"
pdf-extract = "0.10.0"
sha2 = "0.11.0"
hex = "0.4.3"
encoding_rs = "0.8.35"
tauri-plugin-dialog = "2.7.1"
dotenvy = "0.15.7"
